--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 DOMAIN=localhost
-METANAME=GitHub
+METANAME=GitHub - Hello SPicY
 METADESC=GitHub is where people build software. More than 100 million people use GitHub to discover, fork, and contribute to over 420 million projects.
 METALINK=https://github.com
-REDIRECT=https://github.com/ailtonbsj
+REDIRECT=https://github.com/ailtonbsj/hello-spicy
